--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-vue": "^6.0.1",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
+        "sass": "^1.94.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "@vueup/vue-quill": "^1.2.0",
+        "bootstrap": "^5.3.8",
+        "pinia": "^3.0.4",
+        "quill": "^2.0.3",
+        "vue-router": "^4.6.3"
     }
 }
