--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
+        "orangehill/iseed": "^3.1",
         "phpunit/phpunit": "^11.5.3"
     },
     "autoload": {
